# autodungeon

./: .env.example  .gitignore  CLAUDE.md  README.md  agents.py  app.py  autopilot_monitor.py  config.py  dev.ps1  dev.sh  emergent_behavior_report.md  epic-cycle.md  graph.py  image_gen.py  memory.py  models.py  monitor_016.py  monitor_017.py  monitor_autopilot.py  monitor_campaign_013.py  monitor_ws_013.py  monitor_ws_015.py  persistence.py  play-report-1000-turn-campaign.md  play-report-2000-turn-campaign.md  progress-report-session-iv.md  progress-report-session-viii.md  pyproject.toml  tools.py  ui-test-plan.md
.claude/: settings.local.json
_bmad-output/: automation-summary.md
_bmad-output/analysis/: brainstorming-session-2026-01-24.md
_bmad-output/implementation-artifacts/: 1-1-project-foundation-configuration.md  1-2-core-game-state-models.md  1-3-llm-provider-integration.md  1-4-dice-rolling-system.md  1-5-dm-agent-implementation.md  1-6-pc-agent-implementation.md  1-7-langgraph-turn-orchestration.md  1-8-character-configuration-system.md  16-1-api-layer-foundation.md  16-10-advanced-features-ui.md  16-11-frontend-testing.md  (+52 more)
api/: dependencies.py  engine.py  main.py  routes.py  schemas.py  websocket.py
config/: defaults.yaml  dnd5e_data.yaml
docs/: architecture-deep-dive.md  gallery-enhancement-plan.md  prompt.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
styles/: theme.css
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_app.py  test_config.py  test_engine.py  test_error_handling.py  test_expanded_coverage.py  test_graph.py  test_image_api.py  test_image_gen.py  test_image_scanner.py  test_integration_llm.py  test_memory.py  test_models.py  test_persistence.py  test_story_10_1_whisper_data_model.py  test_story_10_2_dm_whisper_tool.py  test_story_10_3_secret_knowledge_injection.py  test_story_10_4_human_whisper_to_dm.py  test_story_10_5_secret_revelation_system.py  test_story_11_1_narrative_element_extraction.py  test_story_11_3_dm_callback_suggestions.py  test_story_11_4_callback_detection.py  test_story_11_5_callback_ui_and_history.py  test_story_12_1_fork_creation.py  test_story_12_2_fork_management_ui.py  test_story_12_3_fork_comparison_view.py  test_story_12_4_fork_resolution.py  test_story_13_1_session_naming.py  test_story_13_2_party_composition_ui.py  test_story_13_3_character_sheet_initialization.py  test_story_15_1_combat_state_model.py  test_story_15_2_initiative_rolling.py  test_story_15_3_combat_aware_routing.py  test_story_15_4_dm_bookend_npc_turns.py  test_story_15_5_combat_ui_indicators.py  test_story_15_6_combat_end_conditions.py  test_story_15_7_npc_damage_tracking.py  (+25 more)
(+152 files in other folders)
